# OrchestraAI

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  package-lock.json  package.json
apps/api/: Dockerfile  Dockerfile.dev  package.json
apps/api/src/: app.module.ts  data-source.ts  main.ts  telemetry.ts
apps/api/src/migrations/: 1711000000000-InitialSchema.ts  1711100000000-AddCustomPricingAndAlerts.ts  1711200000000-AddTraceTypes.ts  1711300000000-AddApiKeyPrefix.ts  1711400000000-AddPrompts.ts  1711500000000-AddHumanInputTraceType.ts  1711600000000-AddUserIdAndTags.ts  1711700000000-AddObservationTypes.ts
apps/web/: Dockerfile  Dockerfile.dev  next.config.js  package.json  tailwind.config.js  tsconfig.tsbuildinfo
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/lib/: api.ts  store.ts  utils.ts
examples/: basic_tracing.py  basic_tracing.ts  crewai_crew.py  google_adk_agent.py  human_in_the_loop.py  human_in_the_loop.ts  kill_switch_demo.py  kill_switch_demo.ts  langchain_agent.py  langchain_agent.ts  langgraph_agent.py  langgraph_agent.ts  llamaindex_rag.py  openai_agents.py  openai_agents.ts
infra/clickhouse/: init.sql
sdks/python/: README.md  pyproject.toml
sdks/python/orchestra_ai/: __init__.py  client.py  decorators.py  init_helper.py  otel.py  token_extraction.py  tracer.py  types.py
sdks/python/orchestra_ai/integrations/: __init__.py  anthropic_tracer.py  autogen_tracer.py  crewai_tracer.py  dspy_tracer.py  google_adk_tracer.py  haystack_tracer.py  instructor_tracer.py  langchain_tracer.py  langgraph_tracer.py  litellm_tracer.py  llamaindex_tracer.py  openai_agents_tracer.py  smolagents_tracer.py
sdks/typescript/: README.md  package.json  tsconfig.json  tsup.config.ts
sdks/typescript/src/: client.ts  index.ts  token-extraction.ts  tracer.ts  types.ts
tests/: langchain_test.py  lmstudio_test.py
(+70 files in other folders)
